[gd_scene load_steps=10 format=3 uid="uid://dg2y6k4tjqjjm"]

[ext_resource type="Script" uid="uid://citclmt4ut0eo" path="res://Scenes/Dungeon Activities/Shop/Scripts/shop.gd" id="1_8mtnb"]
[ext_resource type="Script" uid="uid://c17k72a463o5j" path="res://Scenes/Dungeon Activities/Shop/tab_bar.gd" id="2_8mtnb"]
[ext_resource type="PackedScene" uid="uid://p076elcnrmrn" path="res://Scenes/Dungeon Activities/TB Fight/TB Fight UI/action_icon.tscn" id="3_8mtnb"]
[ext_resource type="Script" uid="uid://cdljijpu82ij6" path="res://Scenes/Dungeon Activities/Shop/buy.gd" id="5_nu5oq"]
[ext_resource type="PackedScene" uid="uid://b2jnca6d4xbes" path="res://Prefabs/UI Elements/InfoBox/info_box.tscn" id="7_o74pv"]
[ext_resource type="PackedScene" uid="uid://coa7c4q8gnqr2" path="res://Scenes/Dungeon Activities/Shop/shop_list_item.tscn" id="8_njpwy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mtnb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o74pv"]
bg_color = Color(0, 0, 0, 1)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8mtnb"]
bg_color = Color(0, 0, 0, 1)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="Shop" type="Node" node_paths=PackedStringArray("camera")]
script = ExtResource("1_8mtnb")
camera = NodePath("Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/MarginContainer"]
layout_mode = 2

[node name="Left" type="VBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabBar" type="HBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer/Left" node_paths=PackedStringArray("shop_tab", "inventory_tab")]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1
script = ExtResource("2_8mtnb")
shop_tab = NodePath("../TabContainer/ShopTab")
inventory_tab = NodePath("../TabContainer/InventoryTab")

[node name="Shop" type="Button" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabBar"]
custom_minimum_size = Vector2(20, 17)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mtnb")
theme_override_styles/normal = SubResource("StyleBoxFlat_o74pv")
text = "Shop"

[node name="Inventory" type="Button" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabBar"]
custom_minimum_size = Vector2(20, 17)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mtnb")
theme_override_styles/normal = SubResource("StyleBoxFlat_8mtnb")
text = "Inventory"

[node name="TabContainer" type="Control" parent="UI/Control/MarginContainer/HBoxContainer/Left"]
layout_mode = 2
size_flags_vertical = 3

[node name="ShopTab" type="Control" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShopItems" type="VBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="EquipmentForSale" type="HBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/ShopItems"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ShopListItem" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/ShopItems/EquipmentForSale" instance=ExtResource("8_njpwy")]
layout_mode = 2

[node name="ShopListItem2" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/ShopItems/EquipmentForSale" instance=ExtResource("8_njpwy")]
layout_mode = 2

[node name="ShopListItem3" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/ShopItems/EquipmentForSale" instance=ExtResource("8_njpwy")]
layout_mode = 2

[node name="ItemsForSale" type="HBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/ShopItems"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ShopListItem" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/ShopItems/ItemsForSale" instance=ExtResource("8_njpwy")]
layout_mode = 2

[node name="ShopListItem2" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/ShopItems/ItemsForSale" instance=ExtResource("8_njpwy")]
layout_mode = 2

[node name="ShopListItem3" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/ShopItems/ItemsForSale" instance=ExtResource("8_njpwy")]
layout_mode = 2

[node name="SelectedItemMoveSet" type="HBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/SelectedItemMoveSet"]
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
text = "Moves"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ActionIcon" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/SelectedItemMoveSet" instance=ExtResource("3_8mtnb")]
layout_mode = 2
size_flags_vertical = 4

[node name="ActionIcon2" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/SelectedItemMoveSet" instance=ExtResource("3_8mtnb")]
layout_mode = 2
size_flags_vertical = 4

[node name="ActionIcon3" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/SelectedItemMoveSet" instance=ExtResource("3_8mtnb")]
layout_mode = 2
size_flags_vertical = 4

[node name="ActionIcon4" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/ShopTab/VBoxContainer/SelectedItemMoveSet" instance=ExtResource("3_8mtnb")]
layout_mode = 2
size_flags_vertical = 4

[node name="InventoryTab" type="Control" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer/Left/TabContainer/InventoryTab"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Gold" type="Label" parent="UI/Control/MarginContainer/HBoxContainer/Left"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
text = "Gold: 10g"

[node name="Right" type="VBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoBox" parent="UI/Control/MarginContainer/HBoxContainer/Right" instance=ExtResource("7_o74pv")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/MarginContainer/HBoxContainer/Right"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buy" type="Button" parent="UI/Control/MarginContainer/HBoxContainer/Right/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy"
script = ExtResource("5_nu5oq")

[node name="Continue" type="Button" parent="UI/Control/MarginContainer/HBoxContainer/Right/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Continue"

[connection signal="pressed" from="UI/Control/MarginContainer/HBoxContainer/Left/TabBar/Shop" to="UI/Control/MarginContainer/HBoxContainer/Left/TabBar" method="_on_shop_pressed"]
[connection signal="pressed" from="UI/Control/MarginContainer/HBoxContainer/Left/TabBar/Inventory" to="UI/Control/MarginContainer/HBoxContainer/Left/TabBar" method="_on_inventory_pressed"]
[connection signal="pressed" from="UI/Control/MarginContainer/HBoxContainer/Right/HBoxContainer/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="UI/Control/MarginContainer/HBoxContainer/Right/HBoxContainer/Continue" to="." method="_on_continue_pressed"]
